Add UpdateContent & update client
