# src/CSharp/EasyMicroservices.ContentsMicroservice.Clients/Connected Services/ContentsGeneratedServices/OpenAPI.nswag.json
@@ -623,6 +623,55 @@
         }
       }
     },
+    "/api/Content/UpdateContentWithKey": {
+      "post": {
+        "tags": [
+          "Content"
+        ],
+        "operationId": "UpdateContentWithKey",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddContentWithKeyRequestContract"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddContentWithKeyRequestContract"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddContentWithKeyRequestContract"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/MessageContract"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MessageContract"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MessageContract"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Content/HardDeleteById": {
       "delete": {
         "tags": [
